-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
ff689624ecc8f3025fce04cb7d1f39b2459455c8
THIS IS NOT FOR RC. Temporary solution is to not use those images.
in qtbase/doc/global/qt-html-templates-offline.qdocconf
HTML.stylesheets += template/style/offline.css
HTML.extraimages += template/images/ico_out.png \
template/images/ico_note.png \
template/images/ico_note_attention.png \
template/images/btn_prev.png \
template/images/btn_next.png \
template/images/home.png \
template/images/arrow.png \
template/images/blu_dot.png \
template/images/bgrContent.png
Running 'make docs':
In file included from /home/jerome/gerrit/_qt5/qtbase/doc/global/qt-module-defaults.qdocconf:4,
/home/jerome/gerrit/_qt5/qtdoc/doc/config/qtdoc.qdocconf:1:
/home/jerome/gerrit/_qt5/qtbase/doc/global/qt-html-templates-offline.qdocconf:4: warning: Cannot open input file for copy: 'template/images/ico_out.png': No such file or directory
We agreed that we should use relative links and not the HTML.templatedir
The HTML.stylesheet variable works, but not extraimages
- is required for
-
QTBUG-28202 Too much space around external links
-
- Closed
-
| For Gerrit Dashboard: QTBUG-28307 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 41830,1 | qdoc: Make extraimages behave like styles and scripts | stable | qt/qtbase | Status: MERGED | +2 | 0 |