qdoc: Make extraimages behave like styles and scripts

This configuration variable now assumes its values,
if relative, are relative to the config file that
contains the extraimages variable.

Task-number: QTBUG-28307
Change-Id: I9b34d1f456b31e36ac77401b957b68cd10590376
Reviewed-by: Jerome Pasion <jerome.pasion@digia.com>

cregit: e77eec1cf781df50c34601801c1ef3d5e6dcf370 https://github.com/qt/qtbase/commit/e77eec1cf781df50c34601801c1ef3d5e6dcf370